Se renombra objetivo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Nereida Joyas - Joyería Masculina Exclusiva en Uruguay
+title: Nereida Joyas - Joyería Femenina Exclusiva en Uruguay
 description: Descubre nuestra colección única de anillos, cadenas y pulseras de alta calidad. Diseños inspirados en culturas antiguas para el hombre moderno.
 ---
 
@@ -8,7 +8,7 @@ description: Descubre nuestra colección única de anillos, cadenas y pulseras d
   <div class="container">
     <div class="hero-content">
       <h1 class="hero-title">Nereida Joyas</h1>
-      <p class="hero-subtitle">Joyería Masculina Exclusiva</p>
+      <p class="hero-subtitle">Joyería Femenina Exclusiva</p>
       <p class="hero-description">Diseños únicos inspirados en culturas antiguas. Calidad artesanal para el hombre moderno.</p>
       <a href="#productos" class="btn-primary">Ver Colección</a>
     </div>
@@ -18,7 +18,7 @@ description: Descubre nuestra colección única de anillos, cadenas y pulseras d
 <section id="productos" class="productos-section">
   <div class="container">
     <h2 class="section-title">Nuestra Colección</h2>
-    <p class="section-description">Explora nuestras piezas exclusivas de joyería masculina</p>
+    <p class="section-description">Explora nuestras piezas exclusivas de joyería femenina</p>
     
     <!-- Anillos -->
     <div class="categoria-productos">
