Se actualiza estética

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ description: Descubre nuestra colección única de anillos, cadenas y pulseras d
     <div class="hero-content">
       <h1 class="hero-title">Nereida Joyas</h1>
       <p class="hero-subtitle">Joyería Femenina Exclusiva</p>
-      <p class="hero-description">Diseños únicos inspirados en culturas antiguas. Calidad artesanal para el hombre moderno.</p>
+      <p class="hero-description">Diseños únicos inspirados en culturas antiguas. Calidad artesanal para la mujer moderna.</p>
       <a href="#productos" class="btn-primary">Ver Colección</a>
     </div>
   </div>
